SERVER-71177 Allow existing time-series bucket collections with old validator version when creating time-series collections