src/mongo/db/timeseries/timeseries_constants.h
@@ -59,8 +59,11 @@ static constexpr StringData kKeyFieldName = "key"_sd;
 static constexpr StringData kOriginalSpecFieldName = "originalSpec"_sd;
 static constexpr StringData kPartialFilterExpressionFieldName = "partialFilterExpression"_sd;
 
-static constexpr int kTimeseriesControlDefaultVersion = 1;
+static constexpr int kTimeseriesControlUncompressedVersion = 1;
 static constexpr int kTimeseriesControlCompressedVersion = 2;
+static constexpr int kTimeseriesControlLatestVersion = kTimeseriesControlCompressedVersion;
+static constexpr int kTimeseriesControlMinVersion = kTimeseriesControlUncompressedVersion;
+
 
 // These are hard-coded control object subfields.
 static constexpr StringData kControlVersionPath = "control.version"_sd;
